# GuiForSelfGoverningShip

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.txt
rsc/: config.json
src/: Data.hpp  HandlerConfLeaf.cpp  HandlerConfLeaf.hpp  Highlighter.cpp  Highlighter.hpp  LineSpace.cpp  LineSpace.hpp  MainWindow.cpp  MainWindow.hpp  Parsser.cpp  Parsser.hpp  PathConfigLeaf.cpp  PathConfigLeaf.hpp  PropertiesWindow.cpp  PropertiesWindow.hpp  PyScriptConfigurationWindow.cpp  PyScriptConfigurationWindow.hpp  SendToWindow.cpp  SendToWindow.hpp  TabTextEditor.cpp  TabTextEditor.hpp  TextEditor.cpp  TextEditor.hpp  WidgetItem.cpp  WidgetItem.hpp  main.cpp
